Update RL Chapter

--- a/Chapter06_RLWithKerasRL.ipynb
+++ b/Chapter06_RLWithKerasRL.ipynb
@@ -84,6 +84,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1e819d3f-c346-4370-8f12-839b20bd5f52",
+   "metadata": {},
+   "source": [
+    "<h2> Cart Pole V0 System</h2>\n",
+    "In the CartPole-v0 environment, a pole is attached to a cart moving along a frictionless track. The pole starts upright and the goal of the agent is to prevent it from falling over by applying a force of -1 or +1 to the cart. A reward of +1 is given for every time step the pole remains upright. An episode ends when (1) the pole is more than 15 degrees from vertical or (2) the cart moves more than 2.4 units from the center.\n",
+    "<br>The problem is considered \"solved\" when the average total reward for the episode reaches 195 over 100 consecutive trials."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1aa0958-5b18-4194-91b6-b2a430fab7d4",
+   "metadata": {},
+   "source": [
+    "<h1>Actor - Critic Learning</h1>\n",
+    "<h2> Introduction</h2>\n",
+    "If you’re learning to play Go, one of the best ways to improve is to get a stronger player to review your games. Sometimes the most useful feedback just points out where you won or lost the game. The reviewer might give comments like, “You were already far behind by move 30” or “At move 110, you had a winning position, but your opponent turned it around by move 130.”\n",
+    "\n",
+    "Why is this feedback helpful? You may not have time to scrutinize all 300 moves in a game, but you can focus your full attention on a 10- or 20-move sequence. The reviewer lets you know which parts of the game are important.\n",
+    "\n",
+    "Reinforcement-learning researchers apply this principle in actor-critic learning, which is a combination of policy learning  and value learning . The policy function plays the role of the actor: it picks what moves to play. The value function is the critic: it tracks whether the agent is ahead or behind in the course of the game. That feedback guides the training process, in the same way that a game review can guide your own study.\n",
+    "<h2>Method</h2>\n",
+    "Actor-Critic methods are temporal difference (TD) learning methods that represent the policy function independent of the value function.\n",
+    "\n",
+    "A policy function (or policy) returns a probability distribution over actions that the agent can take based on the given state. A value function determines the expected return for an agent starting at a given state and acting according to a particular policy forever after.\n",
+    "\n",
+    "In the Actor-Critic method, the policy is referred to as the actor that proposes a set of possible actions given a state, and the estimated value function is referred to as the critic, which evaluates actions taken by the actor based on the given policy. In this tutorial, both the Actor and Critic will be represented using one neural network with two outputs.\n",
+    "   "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "4cc156f7-d86a-4fa5-9d52-6638dea5bac5",
@@ -106,6 +137,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aec74296-30c8-4a5a-b784-c246ceb66b90",
+   "metadata": {},
+   "source": [
+    "<h2>Model</h2>\n",
+    "The Actor and Critic will be modeled using one neural network that generates the action probabilities and critic value respectively. \n",
+    "\n",
+    "During the forward pass, the model will take in the state as the input and will output both action probabilities and critic value V, which models the state-dependent value function. The goal is to train a model that chooses actions based on a policy π that maximizes expected return.\n",
+    "\n",
+    "For Cartpole-v0, there are four values representing the state: cart position, cart-velocity, pole angle and pole velocity respectively. The agent can take two actions to push the cart left (0) and right (1) respectively."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "013d400d-4d1a-43ca-9dd9-41f068c166ef",
@@ -122,6 +166,68 @@
     "critic = layers.Dense(1)(common)\n",
     "\n",
     "model = keras.Model(inputs=inputs, outputs=[action, critic])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa4d928d-cb9a-4a53-90eb-46b8dfb7da6b",
+   "metadata": {},
+   "source": [
+    "<h2>Training</h2>\n",
+    "To train the agent, you will follow these steps:\n",
+    "\n",
+    "Run the agent on the environment to collect training data per episode.\n",
+    "<ol>\n",
+    "<li>Run the agent on the environment to collect training data per episode.</li>\n",
+    "<li>Compute expected return at each time step.</li>\n",
+    "<li>Compute the loss for the combined actor-critic model.</li>\n",
+    "<li>Compute gradients and update network parameters.</li>\n",
+    "<li>Repeat 1-4 until either success criterion or max episodes has been reached.</li>\n",
+    "</ol>\n",
+    "<h3>Collecting Data</h3>\n",
+    "As in supervised learning, in order to train the actor-critic model, you need to have training data. However, in order to collect such data, the model would need to be \"run\" in the environment.\n",
+    "\n",
+    "Training data is collected for each episode. Then at each time step, the model's forward pass will be run on the environment's state in order to generate action probabilities and the critic value based on the current policy parameterized by the model's weights.\n",
+    "\n",
+    "The next action will be sampled from the action probabilities generated by the model, which would then be applied to the environment, causing the next state and reward to be generated.\n",
+    "\n",
+    "\n",
+    "<h2> Comupting the expected return</h2>\n",
+    "The sequence of rewards for each timestep t, {r_t} for t= 1,...,T  collected during one episode is converted into a sequence of expected returns {G_t} for t=1,..., T  in which the sum of rewards is taken from the current timestep t to T and each reward is multiplied with an exponentially decaying discount factor :\n",
+    "\n",
+    "<img src=\"images/reward.png\" width=200>\n",
+    "Since  γ is between 0 and 1, rewards further out from the current timestep are given less weight.\n",
+    "\n",
+    "Intuitively, expected return simply implies that rewards now are better than rewards later. In a mathematical sense, it is to ensure that the sum of the rewards converges.\n",
+    "\n",
+    "<h2> The Critic Loss</h2>\n",
+    "Since a hybrid actor-critic model is used, the chosen loss function is a combination of actor and critic losses for training, as shown below:\n",
+    "<br>Loss = L_Actor + L_Critic<br>\n",
+    "The actor loss is based on policy gradients with the critic as a state dependent baseline and computed with single-sample (per-episode) estimates.\n",
+    "<img src=\"images/l_actor.png\" width =350>\n",
+    "here:<br>\n",
+    "\n",
+    "T : the number of timesteps per episode, which can vary per episode<br>\n",
+    "s_t: the state at timestep t<br>\n",
+    "a_t: chosen action at timestep t given state s<br>\n",
+    "π_Θ: is the policy (actor) parameterized by Θ<br>\n",
+    "V_Θ^π: is the value function (critic) also parameterized by π<br>\n",
+    "G: G_t the expected return for a given state, action pair at timestep t<br>\n",
+    "A negative term is added to the sum since the idea is to maximize the probabilities of actions yielding higher rewards by minimizing the combined loss.\n",
+    "\n",
+    "<h2> Advantage</h2>\n",
+    "the G-V term in our L_actor formulation is called the advantage, which indicates how much better an action is given a particular state over a random action selected according to the policy π for that state.\n",
+    "\n",
+    "While it's possible to exclude a baseline, this may result in high variance during training. And the nice thing about choosing the critic V as a baseline is that it trained to be as close as possible to G, leading to a lower variance.\n",
+    "\n",
+    "In addition, without the critic, the algorithm would try to increase probabilities for actions taken on a particular state based on expected return, which may not make much of a difference if the relative probabilities between actions remain the same.\n",
+    "\n",
+    "For instance, suppose that two actions for a given state would yield the same expected return. Without the critic, the algorithm would try to raise the probability of these actions based on the objective J. With the critic, it may turn out that there's no advantage (G-V) and thus no benefit gained in increasing the actions' probabilities and the algorithm would set the gradients to zero.\n",
+    "\n",
+    "<h2>Critic Loss</h2>\n",
+    "Training V to be as close possible to G can be set up as a regression problem with the following loss function:<br>\n",
+    "<img src=\"images/critic_loss.png\" width=150>\n",
+    "where Lƍ is the Huber loss, which is less sensitive to outliers in data than squared-error loss."
    ]
   },
   {
@@ -223,6 +329,34 @@
     "    if running_reward > 195:  # Condition to consider the task solved\n",
     "        print(\"Solved at episode {}!\".format(episode_count))\n",
     "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f4ca90c-d28a-4cda-8272-0ffa8a0a1454",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's check the trained model.\n",
+    "for i_episode in range(1):\n",
+    "    state = env.reset()\n",
+    "    for t in range(10000):\n",
+    "        env.render()\n",
+    "        print(state)\n",
+    "        # action = env.action_space.sample()\n",
+    "        state = tf.convert_to_tensor(state)\n",
+    "        state = tf.expand_dims(state, 0)\n",
+    "\n",
+    "            # Predict action probabilities and estimated future rewards\n",
+    "            # from environment state\n",
+    "        action_probs, critic_value = model(state)\n",
+    "        action = np.random.choice(num_actions, p=np.squeeze(action_probs))\n",
+    "        state, reward, done, info = env.step(action)\n",
+    "        if done:\n",
+    "            print(\"Episode finished after {} timesteps\".format(t+1))\n",
+    "            break\n",
+    "env.close()"
    ]
   }
  ],
